--- a/HomeTask8/HomeTask8/HomeTask8/Pages/Get.cshtml
+++ b/HomeTask8/HomeTask8/HomeTask8/Pages/Get.cshtml
@@ -7,16 +7,18 @@
 <h2>Getting information</h2>
 
 <form method="get">
-    <div id="input_get_fields">
+    <div class="input_fields">
         <label asp-for="SelectedInfoType"></label><br />
-        <select asp-for="SelectedInfoType" asp-items="Model.InfoTypes">
-            <option value="" selected disabled hidden >Choose type</option>
+        <select onChange="filterFieldTogglingFunction(this.options[this.selectedIndex].value)" 
+                asp-for="SelectedInfoType" asp-items="Model.InfoTypes">
+            <option value="" selected disabled hidden>Choose type</option>
         </select>
     </div>
-    <div id="input_get_fields">
-        <label asp-for="FilterField"></label><br />
+    <div class="input_fields">
+        <label id="FilterFieldLabel" asp-for="FilterField"></label><br />
         <input asp-for="FilterField" />
-    </div> <br />
+    </div>
+    <br />
     <button id="get_button" type="submit">Get Information</button> <br />
 </form>
 
