--- a/HomeTask8/HomeTask8/HomeTask8/wwwroot/css/site.css
+++ b/HomeTask8/HomeTask8/HomeTask8/wwwroot/css/site.css
@@ -70,12 +70,15 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.input_fields {
+.select_section {
     margin: 15px;
     display: inline-block;
 }
 
-
+.filter_section {
+    margin: 15px;
+    display: inline-block;
+}
 
 
 #get_button {
