--- a/HomeTask8/HomeTask8/wwwroot/css/site.css
+++ b/HomeTask8/HomeTask8/wwwroot/css/site.css
@@ -70,11 +70,10 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-#input_get_fields {
+.margining {
     margin: 15px;
-    display: inline-block;
 }
 
-#get_button {
-    margin: 15px;
+.select-section-inline {
+    display: inline-block;
 }
