Connect page complete

--- a/HomeTask8/HomeTask8/Pages/Delete.cshtml
+++ b/HomeTask8/HomeTask8/Pages/Delete.cshtml
@@ -16,7 +16,7 @@
 
     <div class="margining filter-section-on-delete-page">
         <label for="FilterField"></label><br />
-        <input asp-for="FilterField" />
+        <input asp-for="FirstInputField" />
     </div>
     <br />
 
