--- a/HomeTask8/HomeTask8/Pages/Shared/_Layout.cshtml
+++ b/HomeTask8/HomeTask8/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav w-100 nav-justified">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Get">Get</a>
                         </li>
