CoursesLecturers part in hometask 9 complete and change hometask 8 a bit

--- a/HomeTask8/HomeTask8/Pages/Delete.cshtml
+++ b/HomeTask8/HomeTask8/Pages/Delete.cshtml
@@ -140,7 +140,7 @@
 							<th>ID</th>
 							<th>Grade Date</th>
 							<th>Is Complete</th>
-							<th>Hometask ID</th>
+							<th>HomeTask ID</th>
 							<th>Student ID</th>
 						</tr>
 					</thead>
